initial commit, header looks ok

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,122 @@
-.App {
+body {
+  font-family: 'Arial', sans-serif;
+  color: #333;
+  margin: 0;
+  padding: 0;
+}
+
+.App-header {
+  background-color: darkblue;
+  color: rgb(245, 255, 51);
+  padding: 20px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.NavBar ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  background-color: rgb(233, 233, 9);
+  margin: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.NavBar li {
+  margin: 0 15px;
+}
+
+.NavBar a {
+  color: rgb(218, 16, 13);
+  text-decoration: none;
+}
+
+section {
+  padding: 20px;
+  margin: 20px 0;
+}
+
+footer {
+  background-color: #f8f8f8;
+  text-align: center;
+  padding: 10px;
+}
+
+footer ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
+
+footer li {
+  margin: 0 10px;
+}
+
+footer a {
+  text-decoration: none;
+  color: #102643;
+}
+
+.center {
+  display: grid;
+  place-items: center;
+}
+
+.wrapper {
+  /*This part is important for centering*/
+  display: grid;
+  place-items: center;
+}
+
+.typing-demo {
+  width: 22ch;
+  animation: typing 2s steps(22), blink .5s step-end infinite alternate;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 3px solid;
+  font-family: monospace;
+  font-size: 1.5em;
+}
+
+@keyframes typing {
+  from {
+    width: 0
+  }
+}
+    
+@keyframes blink {
+  50% {
+    border-color: transparent
   }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-image: url('../public/images/union-jack.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   color: white;
+  padding: 20px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px; /* Adjust height as needed */
 }
 
-.App-link {
-  color: #61dafb;
+.header-content {
+  background-color: rgba(0, 0, 0, 0.5); /* Optional: adds a semi-transparent background to the text for better readability */
+  padding: 2vh;
+  border-radius: 10px; /* Optional: adds rounded corners to the text background */
+  width: 90%; /* Ensures the content scales well with screen size */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-header h1 {
+  margin: 0;
+  font-size: 2.5vw; /* Responsive font size based on viewport width */
+}
+
+.App-header p {
+  margin: 0;
+  font-size: 1.5vw; /* Responsive font size based on viewport width */
 }
