--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 body {
   font-family: 'Arial', sans-serif;
-  color: #333;
   margin: 0;
   padding: 0;
 }
@@ -20,6 +19,7 @@ body {
   background-color: rgb(233, 233, 9);
   margin: 0;
   height: 3rem;
+  align-items: center;
 }
 
 .NavBar li {
@@ -68,6 +68,7 @@ footer a {
   /*This part is important for centering*/
   display: grid;
   place-items: center;
+  font-family: monospace;
 }
 
 .typing-demo {
@@ -77,7 +78,7 @@ footer a {
   overflow: hidden;
   border-right: 3px solid;
   font-family: monospace;
-  font-size: 1.5em;
+  font-size: 2.5vw;
 }
 
 @keyframes typing {
@@ -103,19 +104,13 @@ footer a {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 300px; /* Adjust height as needed */
-}
-
-.header-content {
-  background-color: rgba(0, 0, 0, 0.5); /* Optional: adds a semi-transparent background to the text for better readability */
-  padding: 2vh;
-  border-radius: 10px; /* Optional: adds rounded corners to the text background */
-  width: 90%; /* Ensures the content scales well with screen size */
+  height: 6rem; /* Adjust height as needed */
+  font-size: 5vw;
 }
 
 .App-header h1 {
   margin: 0;
-  font-size: 2.5vw; /* Responsive font size based on viewport width */
+  font-size: 5vw; /* Responsive font size based on viewport width */
 }
 
 .App-header p {
