--- a/src/App.css
+++ b/src/App.css
@@ -117,3 +117,8 @@ footer a {
   margin: 0;
   font-size: 1.5vw; /* Responsive font size based on viewport width */
 }
+
+img {
+  height: 10rem;
+  width: 10rem;
+}
