--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,15 @@
-body {
+body,
+html {
   font-family: "Arial", sans-serif;
   margin: 0;
   padding: 0;
+  height: 100%;
+}
+
+.root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .App-header {
@@ -35,6 +43,10 @@ body {
 section {
   padding: 20px;
   margin: 20px 0;
+}
+
+.main-content {
+  flex: 1;
 }
 
 footer {
