--- a/src/App.css
+++ b/src/App.css
@@ -72,10 +72,14 @@ footer a {
   color: #102643;
 }
 
+.title {
+  width: 100%;
+  text-align: center;
+  height: 280px;
+}
+
 .center {
-  display: grid;
-  place-items: center;
-  font-size: 1.5rem;
+  width: 45rem;
 }
 
 .wrapper {
