--- a/src/App.css
+++ b/src/App.css
@@ -118,7 +118,7 @@ footer a {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  padding: 20px;
+  padding: 4rem;
   text-align: center;
   display: flex;
   justify-content: center;
