--- a/src/App.css
+++ b/src/App.css
@@ -123,8 +123,9 @@ footer a {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 5rem; /* Adjust height as needed */
+  height: 8vh; /* Adjust height as needed */
   font-size: 2rem;
+  width: 100vw;
 }
 
 .header-content {
@@ -139,7 +140,7 @@ footer a {
 .home-content {
   padding: 2vh;
   border-radius: 10px;
-  width: 90%;
+  width: 80vw;
   display: flex;
   align-items: flex-start;
   flex-wrap: wrap;
