--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ html {
   color: #ffffff;
   padding: 20px;
   text-align: center;
+  width: 100%;
 }
 
 .NavBar ul {
@@ -48,6 +49,7 @@ section {
 
 .main-content {
   flex: 1;
+  width: 140%;
 }
 
 footer {
@@ -131,7 +133,7 @@ footer a {
 .header-content {
   padding: 2vh;
   border-radius: 10px;
-  width: 80%;
+  width: 100vw;
   flex-wrap: wrap;
   color: white;
   font-size: 3rem;
@@ -147,7 +149,7 @@ footer a {
 }
 
 .contentStyle {
-  width: 95vw;
+  width: 90vw;
 }
 
 .lodge-logo {
@@ -166,7 +168,7 @@ footer a {
 @media (max-width: 768px) {
   .home-content {
     flex-direction: column; /* Stack image on top of text */
-    align-items: center;
+    align-items: left;
   }
 
   .lodge-logo {
