--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -4,6 +4,9 @@ footer {
   align-items: center;
   padding: 20px;
   background-color: #f1f1f1;
+  width: 100%;
+  margin: 0;
+  border: "1px solid red";
 }
 
 .footer-left {
@@ -25,5 +28,6 @@ footer {
 }
 
 .footer-logo {
-  height: 5rem; /* Adjust the size as needed */
+  height: 11vh; /* Adjust the size as needed */
+  padding-right: 2vw;
 }
