--- a/src/App.css
+++ b/src/App.css
@@ -158,7 +158,7 @@ footer a {
 
 .homeWelcomeMessage {
   width: 95vw;
-  text-align: left;
+  text-align: center;
   margin-left: 4vw;
 }
 
@@ -189,6 +189,10 @@ footer a {
 
   .text-content {
     width: 100%;
+  }
+
+  .homeWelcomeMessage {
+    text-align: left;
   }
 }
 .text-content p {
