--- a/src/styles/Blog.css
+++ b/src/styles/Blog.css
@@ -12,8 +12,27 @@
   width: 80vw;
 }
 
+.responsive-image {
+  width: 500px; /* Default width: full width of the parent */
+  max-width: 500px; /* Max width to limit the size */
+  height: auto;
+  float: left;
+}
+
 @media (max-width: 768px) {
   .blogContentDiv {
     max-width: 65vw;
+  }
+
+  .responsive-image {
+    max-width: 300px; /* Smaller max-width for tablets */
+    height: auto;
+  }
+}
+
+@media (max-width: 480px) {
+  .responsive-image {
+    max-width: 200px; /* Smaller max-width for mobile devices */
+    height: auto;
   }
 }
